--- a/print-shipping-label.html
+++ b/print-shipping-label.html
@@ -39,14 +39,16 @@
             /* จัดเนื้อหาให้อยู่กลางและสวยงาม */
             padding: 4vmin; /* ปรับ padding ให้เหมาะสม */
             
-            /* --- ปรับขนาดตัวอักษรให้ใหญ่ขึ้นมาก --- */
-            font-size: 8vmin; /* vmin ทำให้ขนาดอักษรสัมพันธ์กับด้านที่เล็กกว่าของจอ */
-            line-height: 1.2; /* ลดระยะห่างระหว่างบรรทัดเพื่อให้แน่นขึ้น */
+            /* --- ปรับขนาดตัวอักษรให้ใหญ่ขึ้นมาก x 1.5 --- */
+            font-size: 12vmin; /* 8 * 1.5 = 12 */
+            line-height: 1.2; 
 
             color: black;
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: center; /* จัดกึ่งกลางแนวตั้ง (ของจอที่หมุนแล้ว) */
+            align-items: center;     /* จัดกึ่งกลางแนวนอน (ของจอที่หมุนแล้ว) */
+            text-align: center;      /* จัดข้อความในแต่ละบรรทัดให้กลาง */
             box-sizing: border-box;
         }
 
@@ -61,7 +63,7 @@
         /* Customer name style */
         #name {
             font-weight: 700;
-            font-size: 10vmin; /* ขยายชื่อให้ใหญ่และเด่นขึ้นไปอีก */
+            font-size: 15vmin; /* 10 * 1.5 = 15 */
         }
 
         /* --- หน้าต่างแจ้งเตือน (Loader/Error) --- */
