--- a/print-shipping-label.html
+++ b/print-shipping-label.html
@@ -16,7 +16,7 @@
             width: 100%;
             height: 100%;
             background-color: white;
-            overflow: hidden; /* ยังคงซ่อน scrollbar ของหน้าหลักไว้ */
+            overflow: hidden; /* จำเป็นต้องมี เพื่อซ่อน scrollbar ของหน้าหลัก */
             -webkit-print-color-adjust: exact;
             print-color-adjust: exact;
         }
@@ -39,15 +39,18 @@
             box-sizing: border-box;
         }
 
-        /* --- ส่วนของเนื้อหาที่แก้ไขใหม่ --- */
+        /* --- ส่วนของเนื้อหาที่แก้ไขใหม่ทั้งหมด --- */
         .content-wrapper {
-            text-align: left;
+            /* กำหนดให้กล่องนี้มีความสูงเต็มพื้นที่ที่ได้รับ */
+            height: 100%; 
             display: flex;
             flex-direction: column;
             
             /* --- จุดแก้ไขสำคัญ: ทำให้เลื่อนได้ --- */
             overflow-y: auto;  /* เพิ่ม scrollbar แนวตั้งเมื่อเนื้อหาล้น */
-            max-height: 100%;  /* จำกัดความสูงสูงสุดให้เท่ากับกรอบที่หมุนอยู่ */
+            
+            /* บอกให้เบราว์เซอร์เตรียมพร้อมสำหรับการเปลี่ยนแปลง ซึ่งช่วยแก้บั๊กการแสดงผลได้ */
+            will-change: transform; 
         }
 
         /* 1. ชื่อผู้รับ: บังคับให้เป็นบรรทัดเดียวเสมอ */
@@ -55,6 +58,7 @@
             white-space: nowrap;
             font-size: 12vmin;
             line-height: 1.2;
+            flex-shrink: 0; /* ไม่ให้บรรทัดนี้หดตัว */
         }
         .name-line strong {
              font-weight: 700;
@@ -69,12 +73,14 @@
             font-size: 12vmin;
             line-height: 1.2;
             white-space: normal;
+            flex-shrink: 0;
         }
 
         /* 2. เบอร์โทร: อยู่บรรทัดของตัวเอง */
         #phone {
             font-size: 12vmin;
             line-height: 1.2;
+            flex-shrink: 0;
         }
 
 
