--- a/print-shipping-label.html
+++ b/print-shipping-label.html
@@ -31,12 +31,12 @@
             top: 100%;
             left: 0;
             
-            /* --- จุดแก้ไขที่ถูกต้องที่สุด --- */
+            /* --- จัดกึ่งกลางจอเต็มรูปแบบ --- */
             display: flex;
             /* justify-content ตอนนี้คือแกน "แนวตั้ง" ของจอภาพ */
-            justify-content: flex-start; /* จัดให้ชิดขอบล่าง */
+            justify-content: center; /* จัดให้กึ่งกลาง */
             /* align-items ตอนนี้คือแกน "แนวนอน" ของจอภาพ */
-            align-items: center;     /* จัดให้กึ่งกลาง */
+            align-items: flex-end;     /* จัดให้ชิดขอบล่าง */
             
             padding: 2vmin;
             box-sizing: border-box;
@@ -92,7 +92,8 @@
 
     <!-- เนื้อหาหลักที่จะถูกหมุน -->
     <div id="label-container" class="rotated-container" style="display: none;">
-        <svg id="svg-container" preserveAspectRatio="xMidYMid meet"></svg>
+        <!-- จุดแก้ไขสำคัญ: เปลี่ยน preserveAspectRatio เป็น xMidYMax -->
+        <svg id="svg-container" preserveAspectRatio="xMidYMax meet"></svg>
     </div>
 
     <script type="module">
