print-shipping-label.html

--- a/print-shipping-label.html
+++ b/print-shipping-label.html
@@ -31,10 +31,10 @@
             top: 100%;
             left: 0;
             
-            /* จัดกึ่งกลางจอเต็มรูปแบบ */
+            /* จัดเนื้อหาให้อยู่กึ่งกลางแนวนอน และชิดขอบล่าง */
             display: flex;
             justify-content: center; 
-            align-items: center;     
+            align-items: flex-end; /* เปลี่ยนจาก center เป็น flex-end เพื่อจัดชิดขอบล่าง */
             
             padding: 2vmin;
             box-sizing: border-box;
