print-shipping-label.html

--- a/print-shipping-label.html
+++ b/print-shipping-label.html
@@ -34,7 +34,7 @@
             /* จัดเนื้อหาให้อยู่กึ่งกลางแนวนอน และชิดขอบล่าง */
             display: flex;
             justify-content: center; 
-            align-items: flex-end; /* เปลี่ยนจาก center เป็น flex-end เพื่อจัดชิดขอบล่าง */
+            align-items: ; /* เปลี่ยนจาก center เป็น flex-end เพื่อจัดชิดขอบล่าง */
             
             padding: 2vmin;
             box-sizing: border-box;
