print-shipping-label.html

--- a/print-shipping-label.html
+++ b/print-shipping-label.html
@@ -111,7 +111,7 @@
     </div>
 
     <div id="label-container" class="rotated-container" style="display: none;">
-        <svg id="svg-container" preserveAspectRatio="xMidYMin meet"></svg>
+        <svg id="svg-container" preserveAspectRatio="xMidYMid meet"></svg>
     </div>
 
     <script type="module">
@@ -287,4 +287,3 @@
     </script>
 </body>
 </html>
-
