--- a/print-shipping-label.html
+++ b/print-shipping-label.html
@@ -23,14 +23,17 @@
 
         /* --- Page rotation container --- */
         .rotated-container {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+
+            /* หมุน 90 องศา และจัดกึ่งกลาง */
+            transform: rotate(-90deg) translate(-50%, -50%);
+            transform-origin: center center;
+
             width: 100vh;
             height: 100vw;
-            transform-origin: top left;
-            transform: rotate(-90deg) translateX(-100vh);
-            position: absolute;
-            top: 0;
-            left: 0;
-            
+
             /* Center the content using Flexbox */
             display: flex;
             justify-content: center; 
@@ -96,7 +99,7 @@
                 display: none !important; /* Hide overlay when printing */
             }
             .rotated-container {
-                transform: rotate(-90deg) translateX(-100vh);
+                transform: rotate(-90deg) translate(-50%, -50%);
                 padding: 0;
                 background-color: white;
             }
