--- a/index.html
+++ b/index.html
@@ -99,6 +99,20 @@
                 <div>
                     <h2 class="text-xl font-semibold text-stone-600 mb-4 pl-2">เครื่องมือและรายงาน</h2>
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+                        <!-- Sales Report -->
+                        <a href="report.html" class="menu-card bg-white p-6 rounded-2xl shadow-sm border border-stone-200 text-center">
+                            <div class="h-14 w-14 rounded-full bg-orange-100 text-orange-600 flex items-center justify-center mx-auto mb-3">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" /></svg>
+                            </div>
+                            <h3 class="text-lg font-semibold text-stone-800">รายงานการขาย</h3>
+                        </a>
+                        <!-- Usage Report -->
+                         <a href="usage-report.html" class="menu-card bg-white p-6 rounded-2xl shadow-sm border border-stone-200 text-center">
+                            <div class="h-14 w-14 rounded-full bg-teal-100 text-teal-600 flex items-center justify-center mx-auto mb-3">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6" /></svg>
+                            </div>
+                            <h3 class="text-lg font-semibold text-stone-800">รายงานการใช้หิน</h3>
+                        </a>
                         <!-- Expenses -->
                         <a href="expenses.html" class="menu-card bg-white p-6 rounded-2xl shadow-sm border border-stone-200 text-center">
                             <div class="h-14 w-14 rounded-full bg-purple-100 text-purple-600 flex items-center justify-center mx-auto mb-3">
@@ -106,21 +120,6 @@
                             </div>
                             <h3 class="text-lg font-semibold text-stone-800">บัญชีและค่าใช้จ่าย</h3>
                         </a>
-                        <!-- Dashboard -->
-                         <a href="dashboard.html" class="menu-card bg-white p-6 rounded-2xl shadow-sm border border-stone-200 text-center">
-                            <div class="h-14 w-14 rounded-full bg-orange-100 text-orange-600 flex items-center justify-center mx-auto mb-3">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" /></svg>
-                            </div>
-                            <h3 class="text-lg font-semibold text-stone-800">แดชบอร์ดสรุป</h3>
-                        </a>
-                        <!-- Coming Soon -->
-                        <div class="bg-gray-100 p-6 rounded-2xl border border-dashed border-gray-300 text-center flex flex-col justify-center">
-                             <div class="h-14 w-14 rounded-full bg-gray-200 text-gray-400 flex items-center justify-center mx-auto mb-3">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M17 9V7a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2m2 4h10a2 2 0 002-2v-6a2 2 0 00-2-2H9a2 2 0 00-2 2v6a2 2 0 002 2zm7-5a2 2 0 11-4 0 2 2 0 014 0z" /></svg>
-                            </div>
-                            <h3 class="text-lg font-semibold text-gray-500">รายงานการขาย</h3>
-                            <p class="text-sm text-gray-400">(เร็วๆ นี้)</p>
-                        </div>
                     </div>
                 </div>
 
