--- a/stock.html
+++ b/stock.html
@@ -148,15 +148,12 @@
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
         import { getFirestore, collection, onSnapshot, doc, getDoc, deleteDoc, updateDoc, query, orderBy } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
         import { getStorage, ref, uploadBytes, getDownloadURL, deleteObject } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-storage.js";
+        // *** FIX: Import config from the central file ***
+        import { firebaseConfig } from './config.js'; 
+        import { showToast } from './utils.js';
 
-        const firebaseConfig = {
-            apiKey: "AIzaSyC0FFHNoma6TkX5GbKdki6B5h2peYOsUu0",
-            authDomain: "kawanwa-stone.firebaseapp.com",
-            projectId: "kawanwa-stone",
-            storageBucket: "kawanwa-stone.appspot.com",
-            messagingSenderId: "678984987842",
-            appId: "1:678984987842:web:952c3f4a8822b23590f75b"
-        };
+        // *** NO LONGER NEEDED HERE ***
+        // const firebaseConfig = { ... };
 
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
@@ -279,7 +276,8 @@
                             await deleteObject(oldImageRef).catch(err => console.error("Error deleting old image:", err));
                         }
                         await deleteDoc(materialRef);
-                    } catch (err) { alert(`Error: ${err.message}`); }
+                        showToast('ลบรายการสำเร็จ');
+                    } catch (err) { showToast(`เกิดข้อผิดพลาด: ${err.message}`, true); }
                 }
             } else if (button.classList.contains('plus-btn')) {
                 const currentStock = parseInt(button.dataset.stock, 10);
@@ -340,10 +338,11 @@
 
                 const materialRef = doc(db, "materials", id);
                 await updateDoc(materialRef, dataToUpdate);
+                showToast('อัปเดตข้อมูลสำเร็จ');
                 closeModal();
             } catch (error) {
                 console.error("Error updating document:", error);
-                alert("เกิดข้อผิดพลาด: " + error.message);
+                showToast("เกิดข้อผิดพลาด: " + error.message, true);
             } finally {
                 submitButton.disabled = false;
                 submitButton.textContent = "บันทึกการเปลี่ยนแปลง";
