--- a/index.html
+++ b/index.html
@@ -10,98 +10,98 @@
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body { font-family: 'Kanit', sans-serif; }
-        .menu-card { transition: all 0.3s ease-in-out; }
-        .menu-card:hover { transform: translateY(-5px); box-shadow: 0 10px 20px rgba(0,0,0,0.1); }
+        .menu-card { transition: all 0.2s ease-in-out; }
+        .menu-card:hover { transform: translateY(-4px); box-shadow: 0 8px 25px rgba(0,0,0,0.1); }
         .stat-card { transition: all 0.2s ease-in-out; }
         .stat-card:hover { transform: scale(1.03); }
     </style>
 </head>
-<body class="bg-gradient-to-br from-stone-50 to-slate-100 min-h-screen">
+<body class="bg-slate-50 min-h-screen">
 
-    <div class="container mx-auto px-4 py-12">
-        <div class="w-full max-w-6xl mx-auto">
-            <header class="text-center mb-10">
-                <h1 class="text-5xl md:text-6xl font-bold text-stone-800 tracking-tight">Kawanwa Stone</h1>
-                <p class="text-lg text-stone-500 mt-2">Dashboard</p>
+    <div class="container mx-auto px-4 py-10">
+        <div class="w-full max-w-7xl mx-auto">
+            
+            <!-- Header -->
+            <header class="flex flex-col sm:flex-row justify-between items-start sm:items-center mb-10">
+                <div>
+                    <h1 class="text-4xl font-bold text-slate-800 tracking-tight">Kawanwa Stone</h1>
+                    <p class="text-slate-500 mt-1">ยินดีต้อนรับ, น็อต!</p>
+                </div>
+                <a href="new-order.html" class="mt-4 sm:mt-0 w-full sm:w-auto flex-shrink-0 text-white bg-sky-500 hover:bg-sky-600 font-medium rounded-lg text-sm px-6 py-3 text-center transition-colors shadow-lg shadow-sky-500/30 flex items-center justify-center gap-2">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M10.75 4.75a.75.75 0 00-1.5 0v4.5h-4.5a.75.75 0 000 1.5h4.5v4.5a.75.75 0 001.5 0v-4.5h4.5a.75.75 0 000-1.5h-4.5v-4.5z" /></svg>
+                    สร้างออเดอร์ใหม่
+                </a>
             </header>
 
-            <!-- Quick Stats Section -->
-            <section id="quick-stats" class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-12">
-                <div class="stat-card bg-yellow-100 p-6 rounded-2xl shadow-sm text-yellow-800 border-2 border-yellow-200">
-                    <h3 class="font-semibold">ออเดอร์ที่ต้องทำ</h3>
-                    <p id="pending-orders-count" class="text-4xl font-bold">...</p>
-                </div>
-                <div class="stat-card bg-rose-100 p-6 rounded-2xl shadow-sm text-rose-800 border-2 border-rose-200">
-                    <h3 class="font-semibold">สินค้าใกล้หมด</h3>
-                    <p id="low-stock-count" class="text-4xl font-bold">...</p>
-                </div>
-                <div class="stat-card bg-green-100 p-6 rounded-2xl shadow-sm text-green-800 border-2 border-green-200">
-                    <h3 class="font-semibold">ยอดขายเดือนนี้</h3>
-                    <p id="monthly-sales" class="text-4xl font-bold">...</p>
-                </div>
-            </section>
-
-            <main class="grid grid-cols-1 lg:grid-cols-3 gap-10">
-                <!-- Main Menu Section -->
+            <main class="grid grid-cols-1 lg:grid-cols-3 gap-8">
+                
+                <!-- Left Column: Main Menu -->
                 <div class="lg:col-span-2">
-                    <h2 class="text-2xl font-semibold text-stone-700 mb-4 pl-2">เมนูหลัก</h2>
-                    <div class="space-y-6">
-                        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                            <a href="new-order.html" class="menu-card bg-white p-6 rounded-2xl shadow-lg flex items-center gap-5">
-                                <div class="flex-shrink-0 h-16 w-16 rounded-xl bg-rose-100 text-rose-600 flex items-center justify-center">
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
-                                </div>
-                                <div>
-                                    <h3 class="text-xl font-bold text-stone-800">สร้างออเดอร์ใหม่</h3>
-                                    <p class="text-stone-500 mt-1">ออกแบบและบันทึกการขาย</p>
-                                </div>
-                            </a>
-                            <a href="order-history.html" class="menu-card bg-white p-6 rounded-2xl shadow-lg flex items-center gap-5">
-                                <div class="flex-shrink-0 h-16 w-16 rounded-xl bg-indigo-100 text-indigo-600 flex items-center justify-center">
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10" /></svg>
-                                </div>
-                                <div>
-                                    <h3 class="text-xl font-bold text-stone-800">จัดการออเดอร์</h3>
-                                    <p class="text-stone-500 mt-1">ดูและอัปเดตสถานะออเดอร์</p>
-                                </div>
-                            </a>
+                    <!-- Quick Stats -->
+                    <section class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-8">
+                        <div class="stat-card bg-white p-6 rounded-2xl shadow-md border border-slate-200 flex items-center gap-5">
+                            <div class="bg-yellow-100 text-yellow-600 h-14 w-14 rounded-full flex items-center justify-center flex-shrink-0">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+                            </div>
+                            <div>
+                                <h3 class="font-semibold text-slate-500">ออเดอร์ที่ต้องทำ</h3>
+                                <p id="pending-orders-count" class="text-3xl font-bold text-slate-800">...</p>
+                            </div>
                         </div>
-                        <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-                            <a href="customers.html" class="menu-card bg-white p-6 rounded-2xl shadow-sm border border-stone-200 text-center">
+                        <div class="stat-card bg-white p-6 rounded-2xl shadow-md border border-slate-200 flex items-center gap-5">
+                             <div class="bg-green-100 text-green-600 h-14 w-14 rounded-full flex items-center justify-center flex-shrink-0">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M11 3.055A9.001 9.001 0 1020.945 13H11V3.055z" /><path stroke-linecap="round" stroke-linejoin="round" d="M20.488 9H15V3.512A9.025 9.025 0 0120.488 9z" /></svg>
+                            </div>
+                            <div>
+                                <h3 class="font-semibold text-slate-500">ยอดขายเดือนนี้</h3>
+                                <p id="monthly-sales" class="text-3xl font-bold text-slate-800">...</p>
+                            </div>
+                        </div>
+                    </section>
+
+                    <!-- Menu Grid -->
+                    <section>
+                         <h2 class="text-xl font-semibold text-slate-700 mb-4">เมนูจัดการ</h2>
+                         <div class="grid grid-cols-2 md:grid-cols-3 gap-5">
+                            <!-- Manage Orders -->
+                            <a href="order-history.html" class="menu-card bg-white p-5 rounded-xl shadow-md border border-slate-200 text-center">
+                                <div class="h-14 w-14 rounded-full bg-indigo-100 text-indigo-600 flex items-center justify-center mx-auto mb-3"><svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10" /></svg></div>
+                                <h3 class="text-md font-semibold text-slate-800">จัดการออเดอร์</h3>
+                            </a>
+                            <!-- Customers -->
+                            <a href="customers.html" class="menu-card bg-white p-5 rounded-xl shadow-md border border-slate-200 text-center">
                                 <div class="h-14 w-14 rounded-full bg-amber-100 text-amber-600 flex items-center justify-center mx-auto mb-3"><svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.653-.124-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.653.124-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" /></svg></div>
-                                <h3 class="text-lg font-semibold text-stone-800">ลูกค้า</h3>
+                                <h3 class="text-md font-semibold text-slate-800">ข้อมูลลูกค้า</h3>
                             </a>
-                            <a href="intake.html" class="menu-card bg-white p-6 rounded-2xl shadow-sm border border-stone-200 text-center">
-                                <div class="h-14 w-14 rounded-full bg-emerald-100 text-emerald-600 flex items-center justify-center mx-auto mb-3"><svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" /></svg></div>
-                                <h3 class="text-lg font-semibold text-stone-800">รับเข้า</h3>
-                            </a>
-                            <a href="stock.html" class="menu-card bg-white p-6 rounded-2xl shadow-sm border border-stone-200 text-center">
+                            <!-- Stock -->
+                            <a href="stock.html" class="menu-card bg-white p-5 rounded-xl shadow-md border border-slate-200 text-center">
                                 <div class="h-14 w-14 rounded-full bg-sky-100 text-sky-600 flex items-center justify-center mx-auto mb-3"><svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M5 8h14M5 8a2 2 0 110-4h14a2 2 0 110 4M5 8v10a2 2 0 002 2h10a2 2 0 002-2V8m-9 4h4" /></svg></div>
-                                <h3 class="text-lg font-semibold text-stone-800">สต็อค</h3>
+                                <h3 class="text-md font-semibold text-slate-800">จัดการสต็อค</h3>
                             </a>
-                        </div>
-                        <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-                             <a href="report.html" class="menu-card bg-white p-6 rounded-2xl shadow-sm border border-stone-200 text-center">
+                            <!-- Intake -->
+                            <a href="intake.html" class="menu-card bg-white p-5 rounded-xl shadow-md border border-slate-200 text-center">
+                                <div class="h-14 w-14 rounded-full bg-emerald-100 text-emerald-600 flex items-center justify-center mx-auto mb-3"><svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" /></svg></div>
+                                <h3 class="text-md font-semibold text-slate-800">รับของเข้า</h3>
+                            </a>
+                            <!-- Reports -->
+                            <a href="report.html" class="menu-card bg-white p-5 rounded-xl shadow-md border border-slate-200 text-center">
                                 <div class="h-14 w-14 rounded-full bg-orange-100 text-orange-600 flex items-center justify-center mx-auto mb-3"><svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" /></svg></div>
-                                <h3 class="text-lg font-semibold text-stone-800">รายงานขาย</h3>
+                                <h3 class="text-md font-semibold text-slate-800">รายงาน</h3>
                             </a>
-                             <a href="usage-report.html" class="menu-card bg-white p-6 rounded-2xl shadow-sm border border-stone-200 text-center">
-                                <div class="h-14 w-14 rounded-full bg-teal-100 text-teal-600 flex items-center justify-center mx-auto mb-3"><svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6" /></svg></div>
-                                <h3 class="text-lg font-semibold text-stone-800">รายงานใช้หิน</h3>
-                            </a>
-                            <a href="expenses.html" class="menu-card bg-white p-6 rounded-2xl shadow-sm border border-stone-200 text-center">
+                            <!-- Expenses -->
+                            <a href="expenses.html" class="menu-card bg-white p-5 rounded-xl shadow-md border border-slate-200 text-center">
                                 <div class="h-14 w-14 rounded-full bg-purple-100 text-purple-600 flex items-center justify-center mx-auto mb-3"><svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M9 7h6m0 10v-3m-3 3h.01M9 17h.01M9 14h.01M12 14h.01M15 11h.01M12 11h.01M9 11h.01M7 21h10a2 2 0 002-2V5a2 2 0 00-2-2H7a2 2 0 00-2 2v14a2 2 0 002 2z" /></svg></div>
-                                <h3 class="text-lg font-semibold text-stone-800">บัญชี</h3>
+                                <h3 class="text-md font-semibold text-slate-800">บัญชี</h3>
                             </a>
-                        </div>
-                    </div>
+                         </div>
+                    </section>
                 </div>
 
-                <!-- Recent Activity Section -->
-                <div class="lg:col-span-1">
-                    <h2 class="text-2xl font-semibold text-stone-700 mb-4 pl-2">ออเดอร์ล่าสุด</h2>
+                <!-- Right Column: Recent Activity -->
+                <div class="lg:col-span-1 bg-white p-6 rounded-2xl shadow-md border border-slate-200">
+                    <h2 class="text-xl font-semibold text-slate-700 mb-4">ออเดอร์ล่าสุด</h2>
                     <div id="recent-orders-container" class="space-y-3">
-                        <p class="text-stone-500 text-center py-8">กำลังโหลด...</p>
+                        <p class="text-slate-500 text-center py-8">กำลังโหลด...</p>
                     </div>
                 </div>
             </main>
@@ -122,12 +122,6 @@
             const pendingOrdersQuery = query(collection(db, "orders"), where("processingStatus", "==", "รอดำเนินการ"));
             onSnapshot(pendingOrdersQuery, (snapshot) => {
                 document.getElementById('pending-orders-count').textContent = snapshot.size;
-            });
-
-            // Fetch Low Stock Items
-            const lowStockQuery = query(collection(db, "materials"), where("stockRemaining", "<=", 10));
-            onSnapshot(lowStockQuery, (snapshot) => {
-                document.getElementById('low-stock-count').textContent = snapshot.size;
             });
 
             // Fetch Monthly Sales
@@ -157,7 +151,7 @@
             onSnapshot(recentOrdersQuery, (snapshot) => {
                 recentOrdersContainer.innerHTML = '';
                 if (snapshot.empty) {
-                    recentOrdersContainer.innerHTML = '<p class="text-stone-500 text-center py-8">ไม่มีออเดอร์ล่าสุด</p>';
+                    recentOrdersContainer.innerHTML = '<p class="text-slate-500 text-center py-8">ไม่มีออเดอร์ล่าสุด</p>';
                     return;
                 }
                 snapshot.forEach(doc => {
@@ -165,12 +159,12 @@
                     const customerName = customersMap.get(order.customerId)?.name || 'N/A';
                     const orderCard = document.createElement('a');
                     orderCard.href = `order-details.html?orderId=${doc.id}`;
-                    orderCard.className = 'block bg-white p-4 rounded-lg shadow-sm border hover:bg-stone-50 transition-colors';
+                    orderCard.className = 'block bg-slate-50 p-4 rounded-lg border border-slate-200 hover:bg-slate-100 transition-colors';
                     orderCard.innerHTML = `
                         <div class="flex justify-between items-center">
                             <div>
-                                <p class="font-semibold text-stone-800">${customerName}</p>
-                                <p class="text-sm text-stone-500">${formatCurrency(order.totalAmount)}</p>
+                                <p class="font-semibold text-slate-800">${customerName}</p>
+                                <p class="text-sm text-slate-500">${formatCurrency(order.totalAmount)}</p>
                             </div>
                             <div>${getProcessingStatusBadge(order.processingStatus)}</div>
                         </div>
