--- a/intake.html
+++ b/intake.html
@@ -32,7 +32,6 @@
                 <p class="text-stone-600 mt-1">กรอกข้อมูลเพื่อบันทึกของใหม่ หรือเพิ่มสต็อคของเดิม</p>
             </header>
 
-            <!-- NEW: Intake Mode Selector -->
             <div class="mb-6">
                 <fieldset class="flex gap-6">
                     <legend class="sr-only">เลือกโหมดการบันทึก</legend>
@@ -71,9 +70,11 @@
                      <div class="space-y-6 p-4 border-l-4 border-emerald-300 bg-emerald-50 rounded-r-lg">
                         <div>
                             <label for="type" class="block text-sm font-medium text-stone-700 mb-1">ประเภท *</label>
+                            <!-- *** อัปเดต: เพิ่ม "จี้" เข้าไปใน dropdown *** -->
                             <select id="type" name="type" class="w-full px-3 py-2 border border-stone-300 rounded-md">
                                 <option value="หิน">หิน</option>
                                 <option value="อุปกรณ์ตกแต่ง">อุปกรณ์ตกแต่ง</option>
+                                <option value="จี้">จี้</option>
                             </select>
                         </div>
                         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
@@ -183,7 +184,7 @@
             allMaterials.forEach(item => {
                 const option = document.createElement('option');
                 option.value = item.id;
-                option.textContent = `${item.name} (${item.size || 'N/A'} mm)`;
+                option.textContent = `${item.name} (${item.size || 'N/A'} mm) - [${item.type}]`;
                 existingItemSelect.appendChild(option);
             });
         }
@@ -258,7 +259,7 @@
 
                 } else { // Mode is 'new'
                     const name = formData.get('name').trim();
-                    const size = parseFloat(formData.get('size')) || 0;
+                    const size = parseFloat(formData.get('size')) || null;
                     if (!name) throw new Error("กรุณากรอกชื่อสำหรับรายการใหม่");
 
                     const imageFile = formData.get('image');
@@ -276,11 +277,14 @@
                     const dataToSave = {
                         importDate: new Date(formData.get('importDate')),
                         type: formData.get('type'),
-                        name: name, size: size,
+                        name: name, 
+                        size: size,
                         supplier: formData.get('supplier'),
-                        totalPrice: newTotalPrice, quantity: newQuantity,
+                        totalPrice: newTotalPrice, 
+                        quantity: newQuantity,
                         avgPricePerPiece: newTotalPrice / newQuantity,
-                        imageUrl: imageUrl, imagePath: imagePath,
+                        imageUrl: imageUrl, 
+                        imagePath: imagePath,
                         stockRemaining: newQuantity,
                         createdAt: serverTimestamp()
                     };
@@ -290,8 +294,8 @@
                 
                 intakeForm.reset();
                 document.getElementById('importDate').valueAsDate = new Date();
-                handleModeChange(); // Reset UI to default
-                await populateExistingItems(); // Refresh dropdown list
+                handleModeChange();
+                await populateExistingItems();
 
             } catch (error) {
                 console.error("Error during intake process: ", error);
