--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
                 <!-- Left Column: Main Menu -->
                 <div class="lg:col-span-2">
                     <h2 class="text-xl font-semibold text-slate-700 mb-4">เมนูจัดการหลัก</h2>
-                    <div class="grid grid-cols-2 md:grid-cols-4 gap-5">
+                    <!-- *** อัปเดต: ปรับปรุง Grid ให้เหมาะสมกับจำนวนเมนูใหม่ *** -->
+                    <div class="grid grid-cols-2 md:grid-cols-3 gap-5">
                         <!-- Manage Orders -->
                         <a href="order-history.html" class="menu-card p-5 rounded-xl shadow-sm border border-slate-200 text-center flex flex-col items-center justify-center">
                             <div class="h-14 w-14 rounded-full bg-indigo-100 text-indigo-600 flex items-center justify-center mb-3"><svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10" /></svg></div>
@@ -94,11 +95,6 @@
                         <a href="intake.html" class="menu-card p-5 rounded-xl shadow-sm border border-slate-200 text-center flex flex-col items-center justify-center">
                             <div class="h-14 w-14 rounded-full bg-emerald-100 text-emerald-600 flex items-center justify-center mb-3"><svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" /></svg></div>
                             <h3 class="text-md font-semibold text-slate-800">รับของเข้า</h3>
-                        </a>
-                        <!-- NEW: Add Charms -->
-                        <a href="intake-charms.html" class="menu-card p-5 rounded-xl shadow-sm border border-slate-200 text-center flex flex-col items-center justify-center">
-                            <div class="h-14 w-14 rounded-full bg-rose-100 text-rose-600 flex items-center justify-center mb-3"><svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" /></svg></div>
-                            <h3 class="text-md font-semibold text-slate-800">เพิ่มสต็อคจี้</h3>
                         </a>
                         <!-- Reports -->
                         <a href="report.html" class="menu-card p-5 rounded-xl shadow-sm border border-slate-200 text-center flex flex-col items-center justify-center">
